--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,13 +9,58 @@
         tools:showIn="@layout/app_bar_main"
         tools:context=".MainActivity" android:id="@+id/onclick">
 
-    <Button
-            android:text="Capture Photo"
-            android:layout_width="wrap_content"
-            android:onClick="getCapture"
+
+    <TextView
+            android:text="Selamat datang Aplikasi Demo Capture Photo dan Geocoding menggunakan Kotlin"
+            android:layout_width="313dp"
             android:layout_height="wrap_content"
-            android:id="@+id/btnCapturePhoto" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:gravity="center"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.509" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
+    <ImageView
+            android:layout_width="216dp"
+            android:layout_height="173dp"
+            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/xsisetg"
+            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.059"/>
+    <Button
+            android:text="Oleh : Masyda Arrizaqu"
+            android:layout_width="0dp"
+            android:background="#00ffffff"
+            android:layout_height="wrap_content"
+            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    <ImageView
+            android:layout_width="111dp"
+            android:layout_height="101dp" app:srcCompat="@drawable/kot1"
+            android:id="@+id/imageView3"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintHorizontal_bias="0.501"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/button2"
+            app:layout_constraintVertical_bias="0.473"/>
+    <Button
+            android:text="Take A Photo"
+            android:layout_width="132dp"
+            android:layout_height="51dp"
+            android:background="#940000"
+            android:padding="10dp"
+            android:textColor="#fff"
+            android:onClick="getCapture"
+            android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
 </android.support.constraint.ConstraintLayout>
