--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
                 android:icon="@drawable/ic_menu_camera"
                 android:title="Import"/>
         <item
+                android:id="@+id/nav_about"
+                android:icon="@drawable/conversation"
+                android:title="About"/>
+        <!--<item
                 android:id="@+id/nav_gallery"
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="Gallery"/>
@@ -19,10 +23,10 @@
         <item
                 android:id="@+id/nav_manage"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="Tools"/>
+                android:title="Tools"/>-->
     </group>
 
-    <item android:title="Communicate">
+    <!--<item android:title="Communicate">
         <menu>
             <item
                     android:id="@+id/nav_share"
@@ -33,6 +37,6 @@
                     android:icon="@drawable/ic_menu_send"
                     android:title="Send"/>
         </menu>
-    </item>
+    </item>-->
 
 </menu>
